NRPT-781: fix footer header to maintain contrast

--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -37,6 +37,7 @@ footer {
             margin-bottom: 1.25rem;
             font-size: 1rem;
             font-weight: 600;
+            color: #FFF;
         }
 
         h5 {
